# apfmalloc

./: .gitignore  Cargo.toml  README.md
C-linking-tests/basic/: lrmalloc_rs.h  main  makefile  malloc_test.c
C-linking-tests/math_parser/: Makefile  README.txt  expr  functions.c  functions.h  main.c  parse_tree.c  parse_tree.h  recursive_parser.c  recursive_parser.h  stack.c  stack.h  table_grammar.txt  table_parser.c  table_parser.h
apfmalloc/: Cargo.toml  README.md
apfmalloc/examples/: hashed_stack.rs
apfmalloc/src/: lib.rs
apfmalloc/tests/: arbitrary_program.rs  override.rs
benches/: allocating_bench.rs  apf_benches.rs  function_benches.rs  multiple_threads.rs  timed_allocation.rs
benchmarking-tools/: Cargo.toml
benchmarking-tools/src/: lib.rs
lrmalloc-rs-global/: Cargo.toml  README.md  lrmalloc_rs.h
lrmalloc-rs-global/examples/: hashed_stack.rs
lrmalloc-rs-global/src/: lib.rs
lrmalloc-rs-global/tests/: arbitrary_program.rs  override.rs
no_harness_test/: Cargo.toml
no_harness_test/src/: main.rs
src/: alloc.rs  allocation_data.rs  auto_ptr.rs  bootstrap.rs  env.rs  info_dump.rs  lib.rs  lib.rs.orig  macros.rs  mem_info.rs  no_heap_mutex.rs  page_map.rs  pages.rs  single_access.rs  size_classes.rs  thread_cache.rs  thread_cache.rs.orig
src/allocation_data/: desc.rs  proc_heap.rs
src/apf/: constants.rs  histogram.rs  histogram.rs.orig  liveness_counter.rs  mod.rs  reuse_counter.rs  timescale_functions.rs  trace.rs
src/independent_collections/: array.rs  hash_map.rs  linked_list.rs  mod.rs  range_mapping.rs
src/independent_collections/array/: sync_array.rs
src/independent_collections/hash_map/: swiss_hash_map.rs  sync_hash_map.rs
src/page_map/: page_table.rs
src/pages/: external_mem_reservation.rs
src/ptr/: auto_ptr.rs  rc.rs
src/visualization/: mod.rs
tests/: allocation_hell.rs  apf_tuning.rs  apf_tuning.rs.orig  benchmark_tests.rs  block_return.rs  duration_based_test.rs  global_allocator.rs  multi_threads.rs  multi_threads_no_global.rs  no_std_global_allocator.rs  random_bins.rs  random_size.rs  single_thread.rs  trivial.rs
