[package]
name = "lrmalloc-rs"
description = "An implementation of (LRMalloc)[https://github.com/ricleite/lrmalloc], but improved with APF tuning (Li et. al., 2019)"
version = "0.1.0"
authors = ["Joshua Radin <jradin2@u.rochester.edu>",
            "Elias Neuman-Donihue <eneumand@u.rochester.edu>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
keywords = ["memory", "allocation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
track_allocation = []

[workspace]
members = [
    "lrmalloc-rs-global"
]

[profile.test]
opt-level = 0

[profile.bench]
opt-level = 3

[dependencies]
bitfield = "0.13.2"
crossbeam = "0.7.3"
memmap = "0.7.0"
libc = "0.2.71"
atomic = "0.4.5"
spin = "0.5.2"
thread_local = "1.0.1"
errno = "0.2.5"

# Windows Dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features=["std", "winuser", "heapapi", "ntdef", "winnt", "winerror", "memoryapi"] }

# Benchmark Dependencies
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "allocating_bench"
harness = false

# [[bench]]
# name = "function_benches"
# harness = false


[[bench]]
name = "multiple_threads"
harness = false