[package]
name = "apfmalloc"
description = "A package that creates FFI bindings for LRMalloc-rs to C programs. It also includes an Rust Allocator that, which the user can either disable being set as the global allocator, or not include entirely."
version = "1.2.0"
authors = ["Joshua Radin <jradin2@u.rochester.edu>"]
edition = "2018"
readme = "README.md"
keywords = ["memory", "allocation"]
repository = "https://github.com/JoshuaRadin37/lrmalloc.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no-rust = []
no-rust-global = []
use-hooks = []

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
apfmalloc-lib = { path = "../"}
libc = "0.2.71"

[dev-dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
