[package]
name = "lrmalloc-rs-global"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib", "dylib"]

[dependencies]
lrmalloc-rs = { path = "../"}
libc = "0.2.71"
rand = "0.7.3"